# commcare-export

./: .coveragerc  .gitignore  .isort.cfg  .style.yapf  .travis.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  black.toml  commcare-export-multi  commcare-export.spec  docker-compose.yml  main.py  mypy.ini  mypy_typed_modules.txt  pyproject.toml  requirements.txt  setup.py
.travis/: test_package.py  wait.sh
build_exe/: README.md  requirements.txt  runtime_hook.py
commcare_export/: __init__.py  _typing.py  builtin_location_types_query.py  builtin_locations_query.py  builtin_queries.py  builtin_users_query.py  checkpoint.py  cli.py  commcare_hq_client.py  commcare_minilinq.py  const.py  data_types.py  env.py  excel_query.py  exceptions.py  jsonpath_env.py  jsonpath_utils.py  location_info_provider.py  map_format.py  minilinq.py  misc.py  progress.py  repeatable_iterator.py  specs.py  utils.py  utils_cli.py  version.py  writers.py
docker/: mysql-init.sql
docs/: cli-usage.md  database-integration.md  development.md  index.md  library-usage.md  minilinq-reference.md  output-formats.md  query-formats.md  scheduling.md  testing.md  user-location-data.md
examples/: demo-deliveries.json  demo-deliveries.xlsx  demo-pregnancy-cases-with-forms.json  demo-pregnancy-cases-with-forms.xlsx  demo-pregnancy-cases.json  demo-pregnancy-cases.xlsx  demo-registrations-joinable-children.json  demo-registrations-with-children.json  demo-registrations-with-children.xlsx  demo-registrations.json  demo-registrations.xlsx  generic-form-metadata.xlsx  scheduled_run_linux.sh  scheduled_run_windows.bat  shorten_excel_column.py
migrations/: README  README.md  alembic.ini  env.py  manage.py  migrate.cfg  script.py.mako
tests/: 001_JustDataSource.xlsx  001a_JustDataSource_LibreOffice.xlsx  002_DataSourceAndFilters.xlsx  003_DataSourceAndEmitColumns.xlsx  004_TwoDataSources.xlsx  005_DataSourcePath.xlsx  006_IncludeReferencedItems.xlsx  007_Mappings.xlsx  008_multiple-tables.xlsx  009_expected_form_data.csv  009_integration.xlsx  009b_expected_form_1_data.csv  009b_expected_form_2_data.csv  009b_integration_multiple.xlsx  010_JustDataSourceTableName.xlsx  011_AlternateSourceFields.xlsx  012_ColumnsWithTypes.xlsx  012_SingleForm.xlsx  013_ConflictingTypes.xlsx  014_ExportWithDataTypes.xlsx  ExportConfig.xlsx  conftest.py  delivery.xlsx  mappings.xlsx  test_builtin_queries.py  test_checkpointmanager.py  test_cli.py  test_commcare_export.py  test_commcare_hq_client.py  test_commcare_minilinq.py  test_env.py  test_excel_query.py  test_map_format.py  test_minilinq.py  test_misc.py  test_package.py  test_paginator.py  test_progress.py  test_repeatable_iterator.py  test_specs.py  (+4 more)
(+29 files in other folders)
