[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "commcare-export"
dynamic = ["version"]
description = "A command-line tool (and Python library) to extract data from CommCare HQ into a SQL database or Excel workbook"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dimagi", email = "information@dimagi.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Archiving",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "alembic",
    "backoff>=2.0",
    "jsonpath-ng~=1.6.0",
    "ndg-httpsclient",
    "openpyxl==3.1.5",
    "python-dateutil",
    "pytz",
    "requests",
    "simplejson",
    "sqlalchemy~=1.4",
    "sqlalchemy-migrate",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-unmagic",
    "psycopg2-binary",
    "mock",
]
base_sql = [
    "SQLAlchemy",
    "alembic",
]
postgres = [
    "SQLAlchemy",
    "alembic",
    "psycopg2-binary",
]
mysql = [
    "SQLAlchemy",
    "alembic",
    "pymysql",
]
odbc = [
    "SQLAlchemy",
    "alembic",
    "pyodbc",
]
xlsx = [
    "openpyxl",
]
xls = [
    "xlwt",
]
executable = [
    "chardet",
    "psycopg2-binary",
    "pymysql",
    "pyodbc",
    "xlwt",
    "openpyxl",
]

[project.urls]
Homepage = "https://github.com/dimagi/commcare-export"

[project.scripts]
commcare-export = "commcare_export.cli:entry_point"
commcare-export-utils = "commcare_export.utils_cli:entry_point"

[tool.setuptools]
packages = ["commcare_export"]
include-package-data = true

[tool.setuptools.package-data]
commcare_export = ["VERSION"]

[tool.setuptools_scm]
version_file = "commcare_export/VERSION"
version_file_template = "{version}"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-vv", "--tb=short"]
